Add start/stop/restart scripts with logging and fix Vite CJS deprecation
- Add PowerShell and batch scripts for starting, stopping, and restarting services
- All scripts include prefixed logs ([Backend], [Frontend]) with timestamps
- Fix Vite CJS deprecation warning by renaming vite.config.ts to vite.config.mts
- Remove pause commands from batch scripts for automated restarts
- Update .gitignore to exclude temporary script files
- Update README with script usage instructions

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Process ID files for start/stop scripts
+.backend.pid
+.frontend.pid
+.backend-start.ps1
+.frontend-start.ps1
+.backend-start.bat
+.frontend-start.bat
